--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^5.1.0",
     "firebase-admin": "^13.5.0",
     "lenis": "^1.3.11",
+    "resend": "^6.4.2",
     "zod": "^3.25.76"
   },
   "devDependencies": {
