--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     ]
   },
   "scripts": {
-    "dev": "vite --port 3000",
+    "dev": "vite",
     "build": "npm run build:client && npm run build:server",
     "build:client": "vite build",
     "build:server": "vite build --config vite.config.server.ts",
@@ -21,14 +21,17 @@
     "typecheck": "tsc",
     "analyze": "npm run build && start dist/stats.html"
   },
-  "dependencies": {
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "firebase-admin": "^13.5.0",
-    "lenis": "^1.3.11",
-    "resend": "^6.4.2",
-    "zod": "^3.25.76"
-  },
+"dependencies": {
+  "react": "^18.3.1",
+  "react-dom": "^18.3.1",
+
+  "dotenv": "^17.2.1",
+  "express": "^5.1.0",
+  "firebase-admin": "^13.5.0",
+  "lenis": "^1.3.11",
+  "resend": "^6.4.2",
+  "zod": "^3.25.76"
+},
   "devDependencies": {
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -109,5 +112,11 @@
     "vite": "^7.1.2",
     "vitest": "^3.2.4"
   },
-  "packageManager": "pnpm@10.26.2"
+  "packageManager": "pnpm@10.26.2",
+  "pnpm": {
+    "overrides": {
+      "react": "18.3.1",
+      "react-dom": "18.3.1"
+    }
+  }
 }
