--- a/package.json
+++ b/package.json
@@ -21,17 +21,17 @@
     "typecheck": "tsc",
     "analyze": "npm run build && start dist/stats.html"
   },
-"dependencies": {
-  "react": "^18.3.1",
-  "react-dom": "^18.3.1",
-
-  "dotenv": "^17.2.1",
-  "express": "^5.1.0",
-  "firebase-admin": "^13.5.0",
-  "lenis": "^1.3.11",
-  "resend": "^6.4.2",
-  "zod": "^3.25.76"
-},
+  "dependencies": {
+    "@emailjs/nodejs": "^5.0.2",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "firebase-admin": "^13.5.0",
+    "lenis": "^1.3.11",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "resend": "^6.4.2",
+    "zod": "^3.25.76"
+  },
   "devDependencies": {
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-accordion": "^1.2.11",
