--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,9 @@
 {
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist/spa",
+  "env": {
+    "NODE_ENV": "production"
+  },
   "rewrites": [
     {
       "source": "/api/:path*",
@@ -8,5 +13,10 @@
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ]
+  ],
+  "functions": {
+    "api/**.ts": {
+      "runtime": "nodejs22.x"
+    }
+  }
 }
