--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,11 @@
 {
   "buildCommand": "npm run build",
   "outputDirectory": "dist/spa",
-  "env": {
-    "NODE_ENV": "production"
-  },
+  "cleanUrls": true,
+  "trailingSlash": false,
   "rewrites": [
     {
-      "source": "/api/:path*",
-      "destination": "/api/:path*"
-    },
-    {
-      "source": "/(.*)",
+      "source": "/((?!api|_next/static|_next/image|favicon.ico).*)",
       "destination": "/index.html"
     }
   ]
