--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,14 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": "dist/spa"
+  "outputDirectory": "dist/spa",
+  "routes": [
+    {
+      "src": "^/api/(.*)$",
+      "dest": "/api"
+    },
+    {
+      "src": "^/(?!api/).*$",
+      "dest": "/"
+    }
+  ]
 }
