chore: update tsconfig and vercel.json for shared API compatibility

--- a/vercel.json
+++ b/vercel.json
@@ -8,4 +8,10 @@
       "destination": "/index.html"
     }
   ]
+  ,
+  "functions": {
+    "api/**/*.ts": {
+      "includeFiles": ["shared/**"]
+    }
+  }
 }
