--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,8 @@
     "paths": {
       "@/*": ["./client/*"],
       "@shared/*": ["./shared/*"]
-    }
+    },
+    "typeRoots": ["./types", "./node_modules/@types"]
   },
   "include": [
     "client/**/*",
